# cuda-quantum

./: .gitmodules  CMakeLists.txt
cudaq/test/: lit.cfg.py
cudaq/test/AST-Quake/: adjoint-1.cpp  adjoint-2.cpp  adjoint-3.cpp  arguments.cpp  array.cpp  auto_kernel-1.cpp  auto_kernel-2.cpp  bool_literal.cpp  bug_3270.cpp  call_qpu.cpp  callable-1.cpp  callable-2.cpp  character_comparison.cpp  compute_action-1.cpp  compute_action-2.cpp  const_reference_extension.cpp  control-2.cpp  control.cpp  control_flow.cpp  ctor-1.cpp  ctrl_vector.cpp  cudaq_run.cpp  custom_operations.cpp  empty_step.cpp  exp_pauli-1.cpp  exp_pauli-2.cpp  exp_pauli-3.cpp  has_conditionals.cpp  if.cpp  infinite_loop.cpp  initialization_list.cpp  lambda.cpp  lambda_instance.cpp  loop_normal.cpp  loop_unroll-1.cpp  loop_unroll-3.cpp  measure_handle.cpp  measure_handle_qir.cpp  mz.cpp  negated_control.cpp  (+30 more)
cudaq/test/AST-error/: bad_sample_signature.cpp  capture_list.cpp  invalid_kernel.cpp  kernel_data_members.cpp  measure_handle.cpp  (+2 more)
lib/Support/: CMakeLists.txt  HostConfig.cpp
python/extension/: CMakeLists.txt  CUDAQuantumExtension.cpp
python/utils/: LinkedLibraryHolder.cpp  LinkedLibraryHolder.h  OpaqueArguments.h
runtime/common/: ArgumentConversion.cpp  BaseRemoteRESTQPU.h  BaseRestRemoteClient.h  CMakeLists.txt  DeviceCodeRegistry.cpp  JIT.cpp  Logger.cpp  RecordLogParser.cpp  RuntimeMLIR.cpp  RuntimeMLIRCommonImpl.h  SimulationState.h  ThunkInterface.h
runtime/cudaq/: cudaq.cpp
runtime/nvqir/: CircuitSimulator.h  NVQIR.cpp
runtime/test/: test_argument_conversion.cpp
scripts/: build_cudaq.sh  configure_build.sh
targettests/SeparateCompilation/: basic.cpp  class.cpp  deduction_guide.cpp  emulate.cpp  lambda.cpp
targettests/execution/: device_call.cpp  graph_coloring-1.cpp  state_init_err_runtime.cpp  state_preparation_vector.cpp  to_integer.cpp
test/AST-Quake/: adjoint-3.cpp  apply_noise_broadcast.cpp  base_profile-0.cpp  calling_convention.cpp  loop_normal.cpp  measure_bell.cpp  negated_control.cpp  to_qir.cpp  while-1.cpp
test/NVQPP/: cudaq_observe.cpp
test/Quake/: apply-2.qke  cse.qke  kernel_exec-1.qke  kernel_exec-2.qke  lambda_kernel_exec.qke  lambda_variable-2.qke  return_vector.qke  vector.qke
test/Quake-QIR/: allocaNoOperand.qke  argument.qke  base-profile-2.qke  base-profile-3.qke  basic.qke  ghz.qke  measure.qke  negated_control.cpp  return_values.qke  testBaseProfile.qke
test/Transforms/: desugar_cable.qke
test/Translate/: alloca_no_operand.qke  base_profile-1.qke  base_profile-2.qke  base_profile-3.qke  base_profile-4.qke  basic.qke  callable.qke  const_array.qke  exp_pauli-1.qke  exp_pauli-3.qke  measure.qke  veq_or_qubit_control_args.qke
tools/cudaq-opt/: CMakeLists.txt  cudaq-opt.cpp
tools/cudaq-quake/: CMakeLists.txt  cudaq-quake.cpp
tools/cudaq-translate/: CMakeLists.txt  cudaq-translate.cpp
tools/nvqpp/: nvq++.in
unittests/Optimizer/: CMakeLists.txt  QuakeSynthTester.cpp
utils/CircuitCheck/: CMakeLists.txt  CircuitCheck.cpp  UnitaryBuilder.cpp
(+248 files in other folders)
